--- a/src/components/HeroStyle.css
+++ b/src/components/HeroStyle.css
@@ -15,6 +15,17 @@
     text-align: center !important;
     background-color: rgb(245, 244, 244) !important;
 }
+.hero-dim{
+    width:100%;
+    height:70vh;
+    position: relative;
+}
+
+.hero-dim h1{
+    padding-bottom: 9rem !important;
+    text-align: center !important;
+    background-color: rgb(245, 244, 244) !important;
+}
 img{
     width:100%;
     height:100%;
